--- a/jasper/Etiquetadecomercializacion.jrxml
+++ b/jasper/Etiquetadecomercializacion.jrxml
@@ -1,47 +1,227 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.4.3.final using JasperReports Library version 6.4.3  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Etiquetadecomercializacion" pageWidth="216" pageHeight="144" columnWidth="176" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isIgnorePagination="true" uuid="50b6ab66-abbb-4016-bde8-814c9d3a31a0">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Etiquetadecomercializacion" pageWidth="216" pageHeight="144" columnWidth="176" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="50b6ab66-abbb-4016-bde8-814c9d3a31a0">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Empenofacil"/>
 	<property name="com.jaspersoft.studio.unit." value="inch"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<parameter name="p_idArticulo" class="java.lang.Integer"/>
+	<property name="com.jaspersoft.studio.report.description" value=""/>
+	<parameter name="folio" class="java.lang.Integer"/>
 	<queryString>
-		<![CDATA[SELECT 
-articulo.idArticulo, 
-articulo.idCategoriaPrenda,
-articulo.idTipoPrenda,
-articulo.idEStadoArticulo,
-articulo.nombre,
-articulo.tamanio,
-articulo.precio,
-articulo.peso,
-articulo.descripcion
-FROM articulo
-WHERE articulo.idArticulo = $P{p_idArticulo}
-]]>
+		<![CDATA[SELECT * FROM contrato INNER JOIN empleado ON contrato.idEmpleado = empleado.idEmpleado INNER JOIN sucursal ON contrato.idSucursal = sucursal.idSucursal INNER JOIN bolsa ON contrato.folio = bolsa.folio INNER JOIN prenda ON bolsa.idPrenda = prenda.idPrenda INNER JOIN categoria_prenda ON prenda.idCategoriaPrenda = categoria_prenda.idCategoriaPrenda INNER JOIN tipo_prenda ON prenda.idTipoPrenda = tipo_prenda.idTipoPrenda WHERE contrato.folio = $P{folio}]]>
 	</queryString>
-	<background>
-		<band splitType="Stretch"/>
-	</background>
-	<title>
-		<band height="79" splitType="Stretch"/>
-	</title>
-	<pageHeader>
-		<band height="35" splitType="Stretch"/>
-	</pageHeader>
-	<columnHeader>
-		<band height="61" splitType="Stretch"/>
-	</columnHeader>
+	<field name="folio" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="folio"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="contrato"/>
+	</field>
+	<field name="idCliente" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="idCliente"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="contrato"/>
+	</field>
+	<field name="idEstadoContrato" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="idEstadoContrato"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="contrato"/>
+	</field>
+	<field name="idSucursal" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="idSucursal"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="contrato"/>
+	</field>
+	<field name="idEmpleado" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="idEmpleado"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="contrato"/>
+	</field>
+	<field name="numBolsa" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="numBolsa"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="contrato"/>
+	</field>
+	<field name="fechaInicioContrato" class="java.sql.Date">
+		<property name="com.jaspersoft.studio.field.label" value="fechaInicioContrato"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="contrato"/>
+	</field>
+	<field name="fechaFinContrato" class="java.sql.Date">
+		<property name="com.jaspersoft.studio.field.label" value="fechaFinContrato"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="contrato"/>
+	</field>
+	<field name="cotitular" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="cotitular"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="contrato"/>
+	</field>
+	<field name="totalAvaluo" class="java.lang.Double">
+		<property name="com.jaspersoft.studio.field.label" value="totalAvaluo"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="contrato"/>
+	</field>
+	<field name="totalPrestamo" class="java.lang.Double">
+		<property name="com.jaspersoft.studio.field.label" value="totalPrestamo"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="contrato"/>
+	</field>
+	<field name="idRol" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="idRol"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="idDomicilio" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="idDomicilio"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="usuario" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="usuario"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="contrasenia" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="contrasenia"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="nombre" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="nombre"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="apellidoPaterno" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="apellidoPaterno"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="apellidoMaterno" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="apellidoMaterno"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="telefono" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="telefono"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="celular" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="celular"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="curp" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="curp"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="rfc" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="rfc"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="fechaNacimiento" class="java.sql.Date">
+		<property name="com.jaspersoft.studio.field.label" value="fechaNacimiento"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="huellaEmpleado" class="java.lang.Object">
+		<property name="com.jaspersoft.studio.field.label" value="huellaEmpleado"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="empleado"/>
+	</field>
+	<field name="email" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="email"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="sucursal"/>
+	</field>
+	<field name="idPrenda" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="idPrenda"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="bolsa"/>
+	</field>
+	<field name="idCategoriaPrenda" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="idCategoriaPrenda"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="prenda"/>
+	</field>
+	<field name="idTipoPrenda" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.label" value="idTipoPrenda"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="prenda"/>
+	</field>
+	<field name="tamanio" class="java.lang.Double">
+		<property name="com.jaspersoft.studio.field.label" value="tamanio"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="prenda"/>
+	</field>
+	<field name="peso" class="java.lang.Double">
+		<property name="com.jaspersoft.studio.field.label" value="peso"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="prenda"/>
+	</field>
+	<field name="descripcion" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="descripcion"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="prenda"/>
+	</field>
+	<field name="avaluo" class="java.lang.Double">
+		<property name="com.jaspersoft.studio.field.label" value="avaluo"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="prenda"/>
+	</field>
+	<field name="prestamo" class="java.lang.Double">
+		<property name="com.jaspersoft.studio.field.label" value="prestamo"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="prenda"/>
+	</field>
+	<field name="categoriaPrenda" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="categoriaPrenda"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="categoria_prenda"/>
+	</field>
+	<field name="tipoPrenda" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="tipoPrenda"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="tipo_prenda"/>
+	</field>
 	<detail>
-		<band height="125" splitType="Stretch"/>
+		<band height="104" splitType="Stretch">
+			<textField isBlankWhenNull="true">
+				<reportElement x="130" y="0" width="50" height="20" uuid="ab86e497-385a-4668-b44e-9036ff590fad"/>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{folio}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="100" y="0" width="30" height="20" uuid="6643c850-7554-4be6-94f6-d34d0f6a5ec7"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<text><![CDATA[CTR.]]></text>
+			</staticText>
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
+				<reportElement mode="Opaque" x="0" y="0" width="80" height="10" forecolor="#FFFFFF" backcolor="#000000" uuid="7d4e1ccb-2cc9-4553-842f-5aedc6e41eed"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="6"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{fechaInicioContrato}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="0" y="10" width="80" height="19" uuid="ff164734-57c4-4ec4-a89d-811985d90a3f"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{numBolsa}]]></textFieldExpression>
+			</textField>
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
+				<reportElement mode="Opaque" x="148" y="61" width="44" height="10" forecolor="#FFFFFF" backcolor="#000000" uuid="fed131a9-b7b5-4bc1-bfbc-0f9b6c3db483"/>
+				<textElement verticalAlignment="Middle">
+					<font size="6"/>
+					<paragraph lineSpacing="Fixed"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{fechaFinContrato}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement mode="Opaque" x="110" y="61" width="40" height="10" forecolor="#FFFFFF" backcolor="#000000" uuid="4823e3ac-a6e8-4d95-b41b-7cf0ec767968"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="6"/>
+				</textElement>
+				<text><![CDATA[VENCE]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="0" y="29" width="114" height="16" uuid="e8963e12-d636-4d11-a5a6-1156b6c15701"/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{idCliente}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="" x="38" y="94" width="72" height="10" uuid="e3829e62-0152-4e9e-9a96-7c565c6ddb22"/>
+				<textElement verticalAlignment="Middle">
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{idCategoriaPrenda}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement key="" x="0" y="94" width="38" height="10" uuid="16788a3c-8d7c-4360-9f76-c1f3fa0bb33c"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="7"/>
+				</textElement>
+				<text><![CDATA[Categoria]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="0" y="45" width="180" height="16" uuid="8f375599-1915-47c6-ac03-7565a902cd47"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{idPrenda}]]></textFieldExpression>
+			</textField>
+			<componentElement>
+				<reportElement x="148" y="71" width="41" height="13" uuid="72c7af1c-44dc-4970-990e-605d70d72fbc"/>
+				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="3of9" drawText="false" checksumRequired="false">
+					<jr:codeExpression><![CDATA[$F{idPrenda}]]></jr:codeExpression>
+				</jr:barbecue>
+			</componentElement>
+		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch"/>
-	</pageFooter>
-	<summary>
-		<band height="42" splitType="Stretch"/>
-	</summary>
 </jasperReport>
